--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 :root {
   --background-color: #fff;
-  --btn-color: #287233;
-  --btn-text-color: #fff;
+  --btn-color: #50b27b;
+  --btn-text-color: #222;
   --project-card-bg: #ffffff00;
   --text-color: #222;
   --form-text-color: #555;
@@ -10,8 +10,8 @@
 
 [data-theme="dark"] {
   --background-color: #222;
-  --btn-color: #287233;
-  --btn-text-color: #222;
+  --btn-color: #50b27b;
+  --btn-text-color: #fff;
   --project-card-bg: #fff;
   --text-color: #fff;
   --form-text-color: #fff;
