--- a/src/sections/Projects/ProjectsStyles.module.css
+++ b/src/sections/Projects/ProjectsStyles.module.css
@@ -20,11 +20,20 @@
   a:hover {
     transform: scale(1.05);
   }
+}
 
+.projectsContainer {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 30px;
+}
+
+@media (width >= 800px) {
   .projectsContainer {
-    display: flex;
     flex-direction: row;
-    align-items: center;
-    gap: 30px;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    padding: 0 30px;
   }
 }
