--- a/src/sections/Projects/ProjectsStyles.module.css
+++ b/src/sections/Projects/ProjectsStyles.module.css
@@ -24,9 +24,9 @@
 
 .projectsContainer {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
-  gap: 30px;
+  gap: 20px;
 }
 
 @media (width >= 800px) {
@@ -35,5 +35,6 @@
     flex-wrap: wrap;
     justify-content: space-evenly;
     padding: 0 30px;
+    gap: 30px;
   }
 }
