--- a/src/sections/Hero/HeroStyles.module.css
+++ b/src/sections/Hero/HeroStyles.module.css
@@ -20,7 +20,7 @@
       margin: 0;
 
       img {
-        width: 30px;
+        width: 20px;
       }
     }
 
@@ -35,7 +35,7 @@
     color: var(--btn-text-color);
     border: none;
     border-radius: 20px;
-    width: 126px;
+    width: 200px;
     height: 50px;
     font-size: 20px;
     font-weight: bold;
@@ -79,7 +79,7 @@
 
 @media (width >= 800px) {
   .container {
-    flex-direction: row-reverse;
+    flex-direction: row;
     align-items: center;
     justify-content: space-evenly;
 
@@ -92,6 +92,7 @@
 
 @media (width >= 1400px) {
   .container {
+    gap: 150px;
     .hero {
       max-width: 400px;
       width: 400px;
