Updated formatting on Contact Details

--- a/src/sections/Contact/Contact.module.css
+++ b/src/sections/Contact/Contact.module.css
@@ -29,8 +29,8 @@
 }
 
 .icon {
-  width: 40px; /* Ensure the icon has a specific width */
-  height: 40px; /* Ensure the icon has a specific height */
+  width: 40px;
+  height: 40px;
   margin-bottom: 10px;
 }
 
